# mcp-contract

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md
.github/workflows/: ci.yml  deploy-site.yml  publish.yml
cli/: README.md  pyproject.toml
cli/mcpc/: __init__.py  __main__.py  cli.py  init.py  pack.py  test.py  unpack.py  validate.py
docs/: CNAME  index.html
examples/code-review/: README.md  mcp-contract.json
examples/code-review/prompts/: main.md
examples/code-review/schemas/: code-review-output.json
examples/due-diligence/: README.md  mcp-contract.json
examples/due-diligence/apps/: memo.html
examples/due-diligence/prompts/: main.md  output-format.md  risk-framework.md
examples/due-diligence/schemas/: analysis-request.json  comps-table.json  sec-filings.json
examples/due-diligence/skills/: claude.md
examples/due-diligence/tools/: server.py
examples/security-review/: README.md  mcp-contract.json
examples/security-review/apps/: report.html
examples/security-review/schemas/: code-review-output.json  vulnerability-scan.json
examples/security-review/skills/: claude.md
examples/security-review/tools/: server.py
schema/: mcp-contract.schema.json
site/: astro.config.mjs  package-lock.json  package.json
site/src/content/docs/: index.mdx  quickstart.md
site/src/content/docs/cli/: index.md
site/src/content/docs/examples/: index.md
site/src/content/docs/specification/: index.md
site/src/styles/: custom.css
