[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mcpc"
version = "0.1.0"
description = "CLI for the MCP Contract specification — validate, inspect, and manage contract bundles."
readme = "../README.md"
license = "Apache-2.0"
requires-python = ">=3.9"

[project.scripts]
mcpc = "mcpc.cli:main"
