[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpc"
version = "0.1.0"
description = "CLI for the MCP Contract specification — validate, inspect, and manage contract bundles."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Joe Fullerton" },
]
keywords = ["mcp", "ai", "llm", "composability", "json-schema", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://mcpcontracts.com"
Repository = "https://github.com/jmfullerton96/mcp-contract"
Specification = "https://github.com/jmfullerton96/mcp-contract/blob/main/SPEC.md"

[project.scripts]
mcpc = "mcpc.cli:main"
